k8s/prod/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/team-withiy/withiy-server:2964251016bb2ea5b3b89f80ae3fe12ec6499649
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 8080
  selector:
    app: server
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: withiy-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`withiy-prod.zerohertz.xyz`)
      kind: Rule
      services:
        - name: server
          port: 8080
  tls:
    certResolver: zerohertz-resolver
